--- a/BlazorApp/Components/_Imports.razor
+++ b/BlazorApp/Components/_Imports.razor
@@ -10,5 +10,6 @@
 @using BlazorApp.Components
 @using DomainModels
 @using BlazorApp.Components.ReusableComponents
-@inject Service.DatabaseService DB;
+@inject Service.DatabaseService DB
 @inject NavigationManager NavigationManager
+@inject Service.FiltreTypes FT
