--- a/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
+++ b/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
@@ -6,11 +6,12 @@
 			<div class="carousel">
 				@for (var i = 0; i < pcGamesToShow.Count; i++)
 				{
+					var path = $"/Picture/{images[i]}.png";
 					var localIndex = i;
 					<div class="carousel-item @(currentIndexPC == i ? "active" : "")">
 						<div class="card-body-bottom" @onclick="@( () => HandleCardClick(pcGamesToShow[localIndex].itemID))">
 							<h4>PC</h4>
-							<img src="./Picture/Temp_Picture.jpg" class="image" />
+							<img src="@path" alt="image @i" />
 							<h4 class="game-name">@pcGamesToShow[localIndex].gameName</h4>
 							<p class="game-genre">@pcGamesToShow[localIndex].genre</p>
 							<p class="game-price">€ @pcGamesToShow[localIndex].price</p>
@@ -20,34 +21,38 @@
 			</div>
 		</div>
 		<div class="card-bottom-section">
-			@for (var i = 0; i < psGamesToShow.Count; i++)
-			{
-				var localIndex = i;
-				<div class="carousel-item @(currentIndexPS == i ? "active" : "")">
-					<div class="card-body-bottom" @onclick="@( () => HandleCardClick(psGamesToShow[localIndex].itemID))">
-						<h4>PS</h4>
-						<img src="./Picture/Temp_Picture.jpg" class="image" />
-						<h4 class="game-name">@psGamesToShow[localIndex].gameName</h4>
-						<p class="game-genre">@psGamesToShow[localIndex].genre</p>
-						<p class="game-price">€ @psGamesToShow[localIndex].price</p>
+			<div class="carousel">
+				@for (var i = 0; i < psGamesToShow.Count; i++)
+				{
+					var localIndex = i;
+					<div class="carousel-item @(currentIndexPS == i ? "active" : "")">
+						<div class="card-body-bottom" @onclick="@( () => HandleCardClick(psGamesToShow[localIndex].itemID))">
+							<h4>PS</h4>
+							<img src="./Picture/skyrim.png" class="image" />
+							<h4 class="game-name">@psGamesToShow[localIndex].gameName</h4>
+							<p class="game-genre">@psGamesToShow[localIndex].genre</p>
+							<p class="game-price">€ @psGamesToShow[localIndex].price</p>
+						</div>
 					</div>
-				</div>
-			}
+				}
+			</div>
 		</div>
 		<div class="card-bottom-section">
-			@for (var i = 0; i < xboxGamesToShow.Count; i++)
-			{
-				var localIndex = i;
-				<div class="carousel-item @(currentIndexXBOX == i ? "active" : "")">
-					<div class="card-body-bottom" @onclick="@( () => HandleCardClick(xboxGamesToShow[localIndex].itemID))">
-						<h4>XBOX</h4>
-						<img src="./Picture/Temp_Picture.jpg" class="image" />
-						<h4 class="game-name">@xboxGamesToShow[localIndex].gameName</h4>
-						<p class="game-genre">@xboxGamesToShow[localIndex].genre</p>
-						<p class="game-price">€ @xboxGamesToShow[localIndex].price</p>
+			<div class="carousel">
+				@for (var i = 0; i < xboxGamesToShow.Count; i++)
+				{
+					var localIndex = i;
+					<div class="carousel-item @(currentIndexXBOX == i ? "active" : "")">
+						<div class="card-body-bottom" @onclick="@( () => HandleCardClick(xboxGamesToShow[localIndex].itemID))">
+							<h4>XBOX</h4>
+							<img src="./Picture/Temp_Picture.jpg" class="image" />
+							<h4 class="game-name">@xboxGamesToShow[localIndex].gameName</h4>
+							<p class="game-genre">@xboxGamesToShow[localIndex].genre</p>
+							<p class="game-price">€ @xboxGamesToShow[localIndex].price</p>
+						</div>
 					</div>
-				</div>
-			}
+				}
+			</div>
 		</div>
 	</div>
 </div>
@@ -61,11 +66,13 @@
 
 	[Parameter]
 	public List<PS_Game> psGamesToShow { get; set; }
-	
+	private string[] images = new string[] { "ac", "skyrim", "ac", "skyrim", "ac", "skyrim", "ac", "skyrim", "ac", "skyrim", "ac", "skyrim" };
+
 
 	public int currentIndexPC = 0;
 	public int currentIndexPS = 0;
 	public int currentIndexXBOX = 0;
+	public int currentIndexImages = 0;
 	private System.Timers.Timer timer;
 
 	protected override void OnInitialized()
@@ -89,5 +96,6 @@
 		currentIndexPC = (currentIndexPC + 1) % pcGamesToShow.Count;
 		currentIndexPS = (currentIndexPS + 1) % psGamesToShow.Count;
 		currentIndexXBOX = (currentIndexXBOX + 1) % xboxGamesToShow.Count;
+		currentIndexImages = (currentIndexImages + 1) % images.Length;
 	}
 }
