--- a/BlazorApp/Components/Pages/ProfilePage.razor
+++ b/BlazorApp/Components/Pages/ProfilePage.razor
@@ -22,7 +22,12 @@
             <div class="col">
                 <div class="ListedSalesContaier">
                     <p>Listed sales: </p>
-                    
+                    <ul>
+                        @foreach (var item in userToShow.ListedSales)
+                        {
+                            <li>@item.Name - @item.Description</li>
+                        }
+                    </ul>
                 </div>
             </div>
         </div>
@@ -48,4 +53,6 @@
             }
         }
     }
+
+    
 }
