--- a/BlazorApp/Components/Pages/Product.razor
+++ b/BlazorApp/Components/Pages/Product.razor
@@ -31,6 +31,7 @@
                 <p class="conditionDetails"><b>Condition: </b>@gameToShow.condition</p>
                 <p class="genreDetails"><b>Genre: </b>@gameToShow.genre</p>
                 <p class="manufactureDetails"><b>Manufacture: </b>@gameToShow.manufacture</p>
+                <p class="manufactureDetails"><b>Manufacture: </b>@gameToShow.userID</p>
             </div>
         </div>
         <div class="col">
