connection to database fixed

--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -12,7 +12,7 @@
 				<a href="" class="btn btn-dark">Learn More</a>
 			</div>
 			<div class="right-colum">
-				<img src="./Picture/Temp_Picture.jpg" alt="" class="colum-image" />
+				<img src="./Picture/Front.jpg" alt="" class="colum-image" />
 			</div>
 		</div>
 	</div>
