--- a/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
+++ b/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
@@ -1,4 +1,5 @@
-﻿﻿@page "/favorites"
+﻿@page "/favorite"
+
 <PageTitle>Gamers Lounge: Your Favorites</PageTitle>
 
 <h3 class="text">Your Favorites</h3>
@@ -7,10 +8,18 @@
 </div>
 
 @code {
-	public List<Item> favGames;
+    public List<Item> favGames = new List<Item>();
 
-	protected override void OnInitialized()
-	{
-		favGames = DB.allItems;
-	}
+    protected override void OnInitialized()
+    {
+        List<int> favorites = DB.GetFavoritesByUserID(1);
+
+        foreach ( var item in DB.allItems)
+        {
+            if (favorites.Contains(item.itemID))
+            {
+                favGames.Add(item);
+            }
+        }
+    }
 }
