--- a/BlazorApp/Components/ReusableComponents/SellerDetails.razor
+++ b/BlazorApp/Components/ReusableComponents/SellerDetails.razor
@@ -8,8 +8,9 @@
 
 @code {
     [Parameter]
-    public User user { get; set; }
+    public int userID { get; set; }
 
+    public User user = DB.
 
     [Parameter]
     public bool IsPopupVisible { get; set; }
