--- a/BlazorApp/Components/Pages/Product.razor
+++ b/BlazorApp/Components/Pages/Product.razor
@@ -39,6 +39,7 @@
         </div>
         <div class="col">
             <div class="sellerLocation">
+                <SellerDetails userID="gameToShow.userID"></SellerDetails>
                 <h5><b>Seller location:</b></h5>
                 <p></p>
             </div>
@@ -57,7 +58,7 @@
                 </div>
                 <div class="modal-body">
 
-                    @* <SellerDetails></SellerDetails> *@
+                  @*   <SellerDetails userID="gameToShow.userID"></SellerDetails> *@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-dark" @onclick="CloseModal">Close</button>
