--- a/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor.css
+++ b/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor.css
@@ -27,6 +27,7 @@
 .card-bottom-section:hover {
     transform: scale(1.05);
     transition: transform 0.3s ease-in-out;
+    cursor: pointer;
 }    
 
 .card-body-bottom {
