--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -3,13 +3,15 @@
 
 <div class="page">
     <div class="sidebar">
-        <NavMenu />
+        <NavMenu/>
     </div>
 
 
     <main style="background-color:#212529;">
         <div class="top-row px-4" style="background-color:#212529;">
-            <a href="register" target="_blank">Register</a>
+            <a href="login">LogIn</a>
+       
+            <a href="register">Register</a>
         </div>
 
         <article class="content px-4" id="bodybackground">
