updated page indicator

--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -7,8 +7,8 @@
     </div>
 
 
-    <main style="background-color:#212529;">
-        <div class="top-row px-4" style="background-color:#212529;">
+    <main style="background-color:#212529; ">
+        <div class="top-row px-4" style="background-color:#212529;z-index: 1000;">
             <a href="register" target="_blank">Register</a>
         </div>
 
