--- a/BlazorApp/Components/Pages/ProductList.razor.css
+++ b/BlazorApp/Components/Pages/ProductList.razor.css
@@ -40,12 +40,24 @@
     width: 100%;
 }
 
+.pagination {
+    justify-content: right;
+    align-items: right;
+    padding: 0.2rem;
+    position: sticky;
+}
+
 .pageCount p {
     margin: 1rem;
     font-size: 1.5rem;
 }
 
-.pageButton {
+.pageBtnText {
+    color: white;
+    padding: 5px 10px 5px 10px;
+}
+
+.pageBtn {
     background-color: white;
     border: none;
     padding: 5px;
@@ -58,31 +70,10 @@
     line-height: 20px; /* Justerer vertikal placering af tekst */
 }
 
-.pageButton:disabled {
+.pageBtn:disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
-
-.arrow {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    font-size: 25px; /* Juster størrelsen af pilen */
-}
-
-.leftArrow {
-    transform: translate(-50%, -50%) rotate(0); /* Juster rotationen for at pege til venstre */
-}
-
-.rightArrow {
-    transform: translate(-50%, -50%) rotate(0deg); /* Juster rotationen for at pege til højre */
-}
-
-
-
-
 
 
 /* Media query for mindre skærme */
@@ -95,3 +86,61 @@
         padding: 0 1rem;
     }
 }
+
+
+/* Generel stil for dropdown-container */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Stil for dropdown-toggle knappen */
+.btn-secondary {
+    color: #fff;
+    background-color: #p3p3p3;
+    border-color: #6c757d;
+}
+
+/* Stil for dropdown-menuen */
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    display: none; /* Initialt skjult */
+    float: left;
+    min-width: 10rem;
+    padding: .5rem 0;
+    margin: .125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #b3b3b3;
+    border-radius: 10px;
+}
+
+/* Stil for dropdown-item'er */
+.dropdown-item {
+    padding: .25rem 1.5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    color: #212529;
+    text-align: inherit;
+    white-space: nowrap;
+    border: 0;
+}
+
+    
+/* Vis dropdown-menuen når dropdown-toggle knappen er klikket */
+.dropdown .dropdown-toggle:focus + .dropdown-menu,
+.dropdown + .dropdown-menu {
+    display: block;
+    color: #16181b;
+    text-decoration: none;
+    background-color: darkgray;
+    font-weight: bold;
+}
+
+
+
