--- a/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
+++ b/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
@@ -1,6 +1,4 @@
-﻿@page "/favorite"
-
-<PageTitle>Gamers Lounge: Your Favorites</PageTitle>
+﻿<PageTitle>Gamers Lounge: Your Favorites</PageTitle>
 
 <h3 class="text">Your Favorites</h3>
 <div class="container">
