--- a/BlazorApp/Components/Pages/Product.razor
+++ b/BlazorApp/Components/Pages/Product.razor
@@ -38,7 +38,7 @@
         <div class="col">
             <div class="sellerLocation">
                 <h5><b>Seller location:</b></h5>
-                <p></p>
+                <p><LocationMap userID="gameToShow.userID"></LocationMap></p>
             </div>
         </div>
     </div>
