--- a/BlazorApp/Components/Pages/ProductList.razor.css
+++ b/BlazorApp/Components/Pages/ProductList.razor.css
@@ -26,10 +26,11 @@
 .container {
     margin-left: auto;
     margin-right: auto;
-    display: flex;
+    display: grid;
     flex-direction: column;
     justify-content: center;
     min-height: 100vh;
+    
 }
 
 .pageCount {
