--- a/BlazorApp/Components/Pages/SalesListing.razor.css
+++ b/BlazorApp/Components/Pages/SalesListing.razor.css
@@ -18,7 +18,7 @@
 
 
 .form-select {
-    box-shadow: 0.2rem 0.5rem 0.3rem rgba(0, 0, 0, 0.1); /* Legg til skygge */
+    box-shadow: 0.2rem 0.5rem 0.3rem rgba(0, 0, 0, 0.1);
 }
 
 
