--- a/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
+++ b/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
@@ -1,4 +1,5 @@
-﻿<PageTitle>Gamers Lounge: Your Favorites</PageTitle>
+﻿@page "/favorite"
+<PageTitle>Gamers Lounge: Your Favorites</PageTitle>
 
 <h3 class="text">Your Favorites</h3>
 <div class="container">
