--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@using Service
+@inject AuthenticationService AuthenticationService
 
 
 <div class="page">
@@ -9,9 +11,19 @@
 
     <main style="background-color:#212529;">
         <div class="top-row px-4" style="background-color:#212529;">
-            <a href="login">LogIn</a>
-       
-            <a href="register">Register</a>
+            
+            @if (AuthenticationService.IsAuthenticated)
+            {
+                <button class="btn btn-link" @onclick="profilePage">Logget ind som: @AuthenticationService.CurrentUser.name</button>
+                <button type="button" class="btn btn-link" @onclick="logout">Log Out</button>
+            }
+            else
+            {
+                <a href="login">LogIn</a>
+
+                <a href="register">Register</a>
+            }
+
         </div>
 
         <article class="content px-4" id="bodybackground">
@@ -25,3 +37,16 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code {
+    private void logout()
+    {
+        AuthenticationService.Logout();
+        NavigationManager.NavigateTo("/");
+    }
+
+    private void profilePage()
+    {
+        NavigationManager.NavigateTo($"/profilepage/{@AuthenticationService.CurrentUser.userID}");
+    }
+}
