--- a/BlazorApp/Components/Pages/Login.razor.css
+++ b/BlazorApp/Components/Pages/Login.razor.css
@@ -11,6 +11,11 @@
     background-color: #b3b3b3;
     text-align: center;
     font-weight: bold;
+    max-width: 100%;
+}
+
+.card-body{
+    max-width: 100%;
 }
 
 .label {
