--- a/BlazorApp/Components/Pages/SalesListing.razor
+++ b/BlazorApp/Components/Pages/SalesListing.razor
@@ -247,6 +247,7 @@ else{
 
     public void SubmitFormPC()
     {
+        AuthenticationService.LoadFromLocalStorage();
         itemId = DB.AddPCGameToDatabase(pcGameToBeCreated);
         ShowModal();
     }
